# plow

./: CONTROL_FLOW_IDEAS.md  README.md  decorators.py  pyproject.toml
plow/: __init__.py  arith.py  cli.py  dag.py  decorators.py  json_schema.py  main.py  schema.py  schema_gen.py  utils.py
tests/: conftest.py  test_dag.py  test_flow.py  test_plow.py
tests/fixtures/: arith.yml  arith_tasks.py  arith_tasks2.py  flow.yml  quadratic_with_control_flow.yaml
