[tool.poetry]
name = "plow"
version = "0.1.0"
description = ""
authors = ["Vilma <vitormaia1890@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
